// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlainAnswerElement/> when answer is editable renders a blank answer text correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <grammarly-editor-plugin
    autodetect="on"
    clientId="client_WpuFqThfMu4rQ4hTvbnDww"
  >
    <textarea
      className="form-control"
      name="answerText"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder="type your answer here"
      value=""
    />
  </grammarly-editor-plugin>
</form>
`;

exports[`<PlainAnswerElement/> when answer is editable renders a prefilled answer text correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <grammarly-editor-plugin
    autodetect="on"
    clientId="client_WpuFqThfMu4rQ4hTvbnDww"
  >
    <textarea
      className="form-control"
      name="answerText"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder="type your answer here"
      value="Hello World"
    />
  </grammarly-editor-plugin>
</form>
`;

exports[`<PlainAnswerElement/> when answer is not editable renders a blank answer text correctly 1`] = `
<p>
  
</p>
`;

exports[`<PlainAnswerElement/> when answer is not editable renders a prefilled answer text correctly 1`] = `
<p>
  Hello World
</p>
`;
